# beancount-paypal

./: README.md  justfile  pyproject.toml
beancount_paypal/: __init__.py  importer.py  lang.py
stage/: beancount-staging.toml  journal.beancount
tests/: journal.beancount  run.py
tests/files/: sample.csv  sample.csv.beancount
